# support-inbox-autopilot-proof

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  evaluate.py  index.html  market_quality.py  pyproject.toml  readiness.py  transcript.txt
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: Dockerfile  alembic.ini
apps/api/app/: __init__.py  database.py  main.py  migrations.py  models.py  providers.py  schemas.py  service.py
apps/api/benchmarks/: __init__.py  async_context_benchmark.py  results.json
apps/api/migrations/: env.py
apps/api/scripts/: __init__.py  benchmark_context.py  explain_queue_query.py
apps/api/sql/: __init__.py  investigate_ticket_query.py  ticket-list-query-plan.json
apps/api/tests/: test_api_workflow.py  (+4 more)
apps/web/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
assets/: synthetic-workflow-recording-v0.vtt
docs/: ARCHITECTURE.md  ASYNC_BENCHMARK.md  BACKEND_ENGINEERING_EVIDENCE.md  DEBUGGING_CASE_STUDY.md  DEMO_SCRIPT.md  DOCKER_POSTGRES_RUNBOOK.md  EVALUATION.md  FULLSTACK_DEBUGGING_CASE_STUDY.md  LIMITATIONS.md  MARKET_QUALITY_GATE.md  SQL_QUERY_INVESTIGATION.md  VERIFICATION.md
evaluation/: market_quality_criteria.json  market_quality_results.json  quality_harness_results.json  results.json  scenarios.json
evaluation/market_evidence/: README.md
scripts/: quality_harness.py
tests/: test_evaluate_cli.py  test_market_quality.py  test_public_page.py  test_quality_harness.py  test_readiness.py
(+8 files in other folders)
