[project]
name = "support-readiness-workbench-api"
version = "0.3.0"
description = "Local FastAPI boundary for the independent support-readiness proof."
requires-python = ">=3.11,<3.15"
dependencies = [
  "aiosqlite>=0.21,<1",
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.116,<1",
  "greenlet>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0.41,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["apps/api/tests"]

[tool.uv]
package = false
